# fastmcp-openapi-spec

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CODE_MODE_GUIDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  openapi.json  pyproject.toml  pytest.ini  requirements.txt  server.py  test_server.py
.github/workflows/: publish.yml  tests.yml
config/: development.env  production.env  staging.env
demo/: README.md
demo/backend/: .env.example  agent.py
demo/frontend/: package.json
demo/frontend/src/app/: globals.css  layout.tsx  page.tsx
deployment/: Dockerfile  docker-compose.yml
deployment/kubernetes/: deployment.yaml
deployment/systemd/: salla-mcp.service
docs/: INSTALLATION.md  VSCODE_SETUP.md
scripts/: quickstart.py
src/: config.py  tools.py
src/salla_mcp/: __init__.py  config.py  main.py
src/salla_mcp/services/: __init__.py  api_client.py  openapi_loader.py
src/salla_mcp/tools/: __init__.py  execute.py  search.py
src/salla_mcp/utils/: __init__.py  errors.py  logger.py
tests/: conftest.py
