[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "salla-mcp-server"
version = "2.0.0"
description = "MCP server that converts any OpenAPI spec into AI-agent-callable tools"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["mcp", "model-context-protocol", "openapi", "ai-agents"]

dependencies = [
    "mcp>=1.26.0",
    "httpx>=0.24.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
salla-mcp = "server:mcp.run"
